remove lorem ipsum

--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@
         <div class="screenshots-header">
           <h2 class="section-title">App Screenshots</h2>
           <p class="section-subtitle">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Whether you're navigating sarcasm, decoding emotion, or exploring social norms, each screen of Voice Intent is designed to make communication feel more natural.
           </p>
         </div>
 
